@startuml

title __FIGURE's Class Diagram__\n

  namespace  {
    namespace om.example.semesterexam {
      namespace figure {
        class com.example.semesterexam.figure.Magician {
            - countdownBuff : Timeline
            - cycleBuff : long
            - hasBuff : boolean
            + Magician()
            + addActionAttackBuffHP()
            + addActionAttackLighting()
            + addActionDieMagicWand()
            + addActionDieNormal()
            + addActionMoveMagicWand()
            + addActionMoveNormal()
            + addAllActions()
            + addAllAttack()
            + addAllWeapon()
            + addAttackMagicWand()
            + addIconSkills()
            + addMagicWand()
            + attack()
            + getKeyPressedEvent()
            + setAttack()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace figure {
        class com.example.semesterexam.figure.SuperHuMan {
            + SuperHuMan()
            + addActionAttackArchery()
            + addActionAttackBlueSlash()
            + addActionAttackRedSlash()
            + addActionDieBlueSword()
            + addActionDieBow()
            + addActionDieNormal()
            + addActionDieRedSword()
            + addActionMoveBlueSword()
            + addActionMoveBow()
            + addActionMoveNormal()
            + addActionMoveRedSword()
            + addAllActions()
            + addAllAttack()
            + addAllWeapon()
            + addAttackBlueSword()
            + addAttackBow()
            + addAttackRedSword()
            + addBlueSword()
            + addBow()
            + addIconSkills()
            + addRedSword()
            + addSounds()
            + setAttack()
        }
      }
    }
  }
  

  com.example.semesterexam.figure.Magician .up.|> com.example.semesterexam.weapon.BuffHP
  com.example.semesterexam.figure.Magician .up.|> com.example.semesterexam.weapon.Lighting
  com.example.semesterexam.figure.Magician -up-|> com.example.semesterexam.core.Figure
  com.example.semesterexam.figure.SuperHuMan .up.|> com.example.semesterexam.weapon.Archery
  com.example.semesterexam.figure.SuperHuMan .up.|> com.example.semesterexam.weapon.BlueSlash
  com.example.semesterexam.figure.SuperHuMan .up.|> com.example.semesterexam.weapon.RedSlash
  com.example.semesterexam.figure.SuperHuMan -up-|> com.example.semesterexam.core.Figure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
